--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -1,10 +1,8 @@
 # Connect with ESP8266
 
-This article mainly introduces how to use `PubSubClient` in the ESP8266 project, and implement the connection, subscription, messaging, unsubscribing and other functions between the client and MQTT broker.
+This article mainly introduces how to use `PubSubClient` in the ESP8266 project,  including implementing the connection, subscription, messaging, and other functions between the client and MQTT broker.
 
 [ESP8266](https://www.espressif.com/en/products/modules/esp8266) provides a highly integrated Wi-Fi SoC solution. Its low-power, compact design, and high stability can meet user's requirements. ESP8266 has a complete and self-contained Wi-Fi network function, which can be applied independently or can run as a slave at another host MCU.
-
-[MQTT](https://www.emqx.com/en/mqtt) is a kind of **lightweight IoT messaging protocol** based on the publish/subscribe model. This protocol provides one-to-many message distribution and decoupling of applications. It has several advantages which are low transmission consumption and protocol data exchange, minimized network traffic, three different service quality levels of message which can meet different delivery needs.
 
 ## Preconditions
 
@@ -15,31 +13,41 @@ This article uses the [Arduino IDE](https://www.arduino.cc/en/software) as the c
 
 ## Install dependencies
 
-1. Install ESP8266 development board
-   Click Tools -> Development Board -> Development Board Management -> Search ESP8266 -> Install
-2. Install PubSub client
-   Project -> Load library -> Library manager... -> Search PubSubClient -> Install PubSubClient by Nick O’Leary
+In Arduino IDE, complete the following installations:
 
-## Connection
+1. Install ESP8266 development board.
+   Click **Tools** -> **Development Board** -> **Development Board Management**. Search ESP8266 and click **Install**.
+2. Install PubSub client.
+   Click**Project** -> **Load library** -> **Library manager...**. Search PubSubClient and Install PubSubClient by Nick O’Leary.
+
+## Connect to MQTT Broker
 
 > Please find the relevant address and port information in the Deployment Overview of the Console. Please note that if it is the basic edition, the port is not 1883 or 8883, please confirm the port.
 
-### Connection settings
 
 This article will use the [free public MQTT broker](https://www.emqx.com/en/mqtt/public-mqtt5-broker) provided by EMQX. This service was created based on the [EMQX Cloud](https://www.emqx.com/en/cloud). The information about broker access is as follows:
 
 - Broker: **broker.emqx.io**
 - TCP Port: **1883**
-- WebSocket Port: **8083**
+- SSL/TLS Port: **8883**
 
-### Firstly, we import libraries ESP8266WiFi and PubSubClient.
+> Please find the relevant address and port information in the Deployment Overview in the Console. Please note that if it is Standard deployment, the ports will be 15xxx.
+
+This article will cover connecting via the TCP port and SSL/TLS port respectively, for those using Serverless deployments, please see the SSL/TLS port connection example. MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
+
+### Connect to MQTT Broker over TCP port
+After you finish the connection settings, follow the steps below to write codes in Arduino IDE:
+
+1. Import libraries ESP8266WiFi and PubSubClient.
 
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 ```
 
-### Set Wi-Fi name and password, and connection address and port of MQTT broker
+2. Set Wi-Fi name and password, and connection address and port.
+
+   If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
 
 ```c
 // WiFi
@@ -47,14 +55,14 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker.emqx.io";
-const char *topic = "esp8266/test";
-const char *mqtt_username = "emqx";
-const char *mqtt_password = "public";
-const int mqtt_port = 1883;
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 1883; // port of MQTT over TCP
 ```
 
-### Open a serial connection for facilitating to output of the result of the program and connecting to the Wi-Fi network.
+3. Open a serial connection to output of the result of the program and connecting to the Wi-Fi network.
 
 ```c
 // Set software serial baud to 115200;
@@ -67,7 +75,7 @@ while (WiFi.status() != WL_CONNECTED) {
 }
 ```
 
-### Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
+4. Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
 
 ```c
 client.setServer(mqtt_broker, mqtt_port);
@@ -83,28 +91,17 @@ while (!client.connected()) {
         delay(2000);
     }
 }
-
-void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
-    for (int i = 0; i < length; i++) {
-        Serial.print((char) payload[i]);
-    }
-    Serial.println();
-    Serial.println("-----------------------");
-}
 ```
 
-### After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+5. After successfully connecting to the MQTT broker, ESP8266 will publish messages on topic `ESP32/test` to the MQTT server and subscribe to messages on topic `esp8266/test`.
 
 ```c
 // publish and subscribe
-client.publish(topic, "hello emqx");
-client.subscribe(topic);
+client.publish(topic, "hello emqx"); // publish to the topic
+client.subscribe(topic); // subscribe from the topic
 ```
 
-### Printing the topic name to the serial port and then print every byte of received messages.
+6. Printing the topic name to the serial port and then print every byte of received messages.
 
 ```c
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -119,7 +116,7 @@ void callback(char *topic, byte *payload, unsigned int length) {
 }
 ```
 
-### The full code
+The complete code is displayed as follows:
 
 ```c
 #include <ESP8266WiFi.h>
@@ -130,11 +127,11 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker.emqx.io";
-const char *topic = "esp8266/test";
-const char *mqtt_username = "emqx";
-const char *mqtt_password = "public";
-const int mqtt_port = 1883;
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 1883; // port of MQTT over TCP
 
 WiFiClient espClient;
 PubSubClient client(espClient);
@@ -165,8 +162,8 @@ void setup() {
       }
   }
   // publish and subscribe
-  client.publish(topic, "hello emqx");
-  client.subscribe(topic);
+  client.publish(topic, "hello emqx"); // publish to the topic
+  client.subscribe(topic); // subscribe from the topic
 }
 
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -185,15 +182,238 @@ void loop() {
 }
 ```
 
-## Test
+### Connect MQTT Broker over TLS/SSL port
+MQTT over TCP port and MQTT over SSL/TLS port connections are different in the connection settings, the code is the same in the publish and subscribe functions.
 
-1. Please use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor
+1. Import libraries ESP8266WiFi and PubSubClient.
+
+```c
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+#include <WiFiClientSecureBearSSL.h>
+```
+
+2. Set Wi-Fi name and password, and connection address and port.
+
+If you are using EMQX Cloud, please refer to [Serverless Authentication](../deployments/auth_serverless.md) and [Dedicated Authentication](../deployments/auth_dedicated.md) to set username and password.
+
+```c
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+```
+
+3. Set server-side certificate.
+
+   If you are using public MQTT broker, Serverless deployment or Standard deployment for a TLS/SSL port connection, [download CA certificate](https://assets.emqx.com/data/emqxsl-ca.crt) here. If you are using Professional deployment for TLS/SSL port connections, please use your own server-side certificate.
+
+```c
+// load DigiCert Global Root CA ca_cert
+const char * ca_cert = \
+  "-----BEGIN CERTIFICATE-----\n"\
+"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
+"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
+"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
+"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
+"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
+"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
+"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
+"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
+"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
+"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
+"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
+"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
+"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
+"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
+"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
+"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
+"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
+"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
+"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
+"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
+"-----END CERTIFICATE-----\n";
+
+BearSSL::WiFiClientSecure espClient; //
+PubSubClient client(espClient); //
+```
+
+4. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
+
+```c
+// Set software serial baud to 115200;
+Serial.begin(115200);
+// connecting to a WiFi network
+WiFi.begin(ssid, password);
+while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.println("Connecting to WiFi..");
+}
+Serial.println("Connected to the WiFi network");
+```
+
+5. Set certificate and MQTT broker. Write callback function, and print connection information on the serial monitor at the same time.
+
+```c
+BearSSL::X509List ca(ca_cert);
+espClient.setTrustAnchors(&ca);
+client.setServer(mqtt_broker, mqtt_port);
+client.setCallback(callback);
+while (!client.connected()) {
+    String client_id = "esp8266-client-";
+    client_id += String(WiFi.macAddress());
+    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
+    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+        Serial.println("Connected to MQTT broker.");
+    } else {
+        Serial.print("Failed to connect to MQTT broker, rc=");
+        Serial.print(client.state());
+        Serial.println(" Retrying in 5 seconds.");
+        delay(5000);
+    }
+}
+```
+
+6. After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
+
+```c
+// publish and subscribe
+client.publish(topic, "hello emqx"); // publish to the topic
+client.subscribe(topic); // subscribe from the topic
+```
+
+7. Print the topic name to the serial port and then print every byte of received messages.
+
+```c
+void callback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+```
+
+The complete code is displayed as follows:
+
+```c
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+#include <WiFiClientSecureBearSSL.h>
+
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+
+
+// load DigiCert Global Root CA ca_cert
+const char * ca_cert = \
+  "-----BEGIN CERTIFICATE-----\n"\
+"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
+"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
+"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
+"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
+"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
+"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
+"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
+"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
+"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
+"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
+"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
+"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
+"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
+"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
+"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
+"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
+"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
+"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
+"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
+"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
+"-----END CERTIFICATE-----\n";
+
+BearSSL::WiFiClientSecure espClient;
+PubSubClient client(espClient);
+
+void setup() {
+  Serial.begin(115200);
+  WiFi.begin(ssid, password);
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(1000);
+    Serial.println("Connecting to WiFi...");
+  }
+  Serial.println("Connected to the WiFi network");
+
+  // connecting to a mqtt broker
+  BearSSL::X509List ca(ca_cert);
+  espClient.setTrustAnchors(&ca);
+  client.setServer(mqtt_broker, mqtt_port);
+  client.setCallback(callback);
+  while (!client.connected()) {
+    String client_id = "esp8266-client-";
+    client_id += String(WiFi.macAddress());
+    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
+    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+        Serial.println("Connected to MQTT broker.");
+    } else {
+        Serial.print("Failed to connect to MQTT broker, rc=");
+        Serial.print(client.state());
+        Serial.println(" Retrying in 5 seconds.");
+        delay(5000);
+    }
+  }
+
+    // publish and subscribe
+    client.publish(topic, "hello emqx"); // publish to the topic
+    client.subscribe(topic); // subscribe from the topic
+}
+
+void callback(char* topic, byte* payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+
+void loop() {
+  if (!client.connected()) {
+    reconnect();
+  }
+  client.loop();
+}
+```
+
+## Test Connection
+
+After the client has successfully connected to the MQTT broker, you can use the Arduino IDE and MQTT X to test the connection.
+
+1. Use Arduino IDE to upload the complete code to ESP8266 and open the serial monitor.
    ![esp8266_connection](./_assets/esp8266_connection.png)
-2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266
+2. Establish the connection between MQTT X client and MQTT broker, and send messages to ESP8266.
    ![esp8266_mqttx](./_assets/esp8266_mqttx.png)
 3. View the messages ESP8266 received in the serial monitor
    ![esp8266_receive](./_assets/esp8266_receive.png)
 
 ## More
 
-In summary, we have implemented the creation of an MQTT connection in a ESP8266 project, simulated subscribing, sending and receiving messages, unsubscribing, and disconnecting between the client and MQTT broker. You can download the source code of the example [here](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266), and you can also find more demo examples in other languages on [GitHub](https://github.com/emqx/MQTT-Client-Examples).
+In summary, we have implemented the creation of an MQTT connection in an ESP8266 project, and simulated connecting, subscribing, sending and receiving messages between the client and MQTT broker.  You can download the source code of the example [here](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266), and you can also find more demo examples in other languages on [GitHub](https://github.com/emqx/MQTT-Client-Examples).
+
