--- a/zh_CN/connect_to_deployments/esp8266.md
+++ b/zh_CN/connect_to_deployments/esp8266.md
@@ -1,10 +1,9 @@
 # 连接 ESP8266
 
-本文主要介绍如何在 ESP8266 项目中使用 `PubSubClient` ，实现客户端与 MQTT 服务器的连接、订阅、收发消息、取消订阅等功能。
+本文主要介绍如何在 ESP8266 项目中使用 `PubSubClient` ，实现客户端与 MQTT 服务器的连接、订阅、收发消息等功能。
 
 [ESP8266](https://www.espressif.com/zh-hans/products/modules/esp8266) 提供了⼀套⾼度集成的 Wi-Fi SoC 解决⽅案，其低功耗、 紧凑设计和⾼稳定性可以满⾜⽤户的需求。ESP8266 拥有完整的且⾃成体系的 Wi-Fi ⽹络功能，既能够独⽴应⽤，也可以作为从机搭载于其他主机 MCU 运⾏。
 
-[MQTT](https://www.emqx.com/zh/mqtt) 是一种基于发布/订阅模式的 **轻量级物联网消息传输协议**。该协议提供了一对多的消息分发和应用程序的解耦，具备很小的传输消耗和协议数据交换、最大限度减少网络流量和三种不同消息服务质量等级，满足不同投递需求的优势。
 
 ## 前提条件
 
@@ -15,32 +14,40 @@
 
 ## 安装依赖
 
-1. 安装 ESP8266 开发板
-   点击 工具 -> 开发板 -> 开发板管理 -> 搜索 ESP8266 -> 点击安装
+在 Arduino IDE 中完成以下安装。
 
-2. 安装 PubSub client 库
-   项目 -> 加载库 -> 管理库... -> 搜索 PubSubClient -> 安装 PubSubClient by Nick O’Leary
+1. 安装 ESP8266 开发板。
+   点击**工具** -> **开发板** -> **开发板管理**。搜索 ESP8266，点击**安装**。
+2. 安装 PubSub client 库。
+   点击**项目** -> **加载库** -> **管理库...**。搜索 PubSubClient，安装 PubSubClient by Nick O’Leary。
 
-## 连接
+## 连接 MQTT 服务器
 
-> 请在控制台的部署概览找到相关的地址以及端口信息，需要注意如果是基础版，端口不是 1883 或 8883 端口，请确认好端口。
-
-### 连接设置
 
 本文将使用 EMQX 提供的 [免费公共 MQTT 服务器](https://www.emqx.com/zh/mqtt/public-mqtt5-broker)，该服务基于 EMQX 的 [MQTT 物联网云平台](https://www.emqx.com/zh/cloud) 创建。服务器接入信息如下：
 
-- Broker: **broker-cn.emqx.io**
+- Broker: **broker.emqx.io**
 - TCP Port: **1883**
-- WebSocket Port: **8083**
+- SSL/TLS Port: **8883**
 
-### 导入 WiFi 和 PubSubClient 库
+> 请在控制台的部署概览找到相关的地址以及端口信息，需要注意如果是基础版，端口为 15xxx，请确认好端口。
+
+本文将分别介绍通过 TCP 端口和 SSL/TLS 端口来连接，对于使用 Serverless 部署的用户，请查看 SSL/TLS 端口连接示例。TCP 端口和 SSL/TLS 端口连接在连接设置部分略有不同，发布和订阅部分代码相同。
+
+
+### 通过 TCP 端口进行连接
+连接设置完成后，在 Arduino IDE 中按以下步骤编写代码：
+
+1. 导入 WiFi 和 PubSubClient 库。
 
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 ```
 
-### 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口
+2. 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口。
+
+   如果您在使用 EMQX Cloud, 请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。
 
 ```c
 // WiFi
@@ -48,14 +55,14 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker-cn.emqx.io";
-const char *topic = "esp8266/test";
-const char *mqtt_username = "emqx";
-const char *mqtt_password = "public";
-const int mqtt_port = 1883;
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 1883; // port of MQTT over TCP
 ```
 
-### 打开串行连接，以便于输出程序的结果并且连接到 Wi-Fi 网络
+3. 打开串行连接，以便于输出程序的结果并且连接到 Wi-Fi 网络。
 
 ```c
 // Set software serial baud to 115200;
@@ -68,7 +75,7 @@ while (WiFi.status() != WL_CONNECTED) {
 }
 ```
 
-### 使用 PubSubClient 连接到公共 MQTT Broker。
+4. 使用 PubSubClient 连接到公共 MQTT Broker。
 
 ```c
 client.setServer(mqtt_broker, mqtt_port);
@@ -85,28 +92,17 @@ while (!client.connected()) {
         delay(2000);
     }
 }
-
-void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
-    for (int i = 0; i < length; i++) {
-        Serial.print((char) payload[i]);
-    }
-    Serial.println();
-    Serial.println("-----------------------");
-}
 ```
 
-### MQTT 服务器连接成功后，ESP8266 将向 MQTT 服务器发布消息和订阅主题
+5. MQTT 服务器连接成功后，ESP8266 将向 MQTT 服务器发布消息和订阅主题。
 
 ```c
 // publish and subscribe
-client.publish(topic, "hello emqx");
-client.subscribe(topic);
+client.publish(topic, "hello emqx"); // publish to the topic
+client.subscribe(topic); // subscribe from the topic
 ```
 
-### 将主题名称打印到串行端口，然后打印收到消息的每个字节
+6. 将主题名称打印到串行端口，然后打印收到消息的每个字节。
 
 ```c
 void callback(char *topic, byte *payload, unsigned int length) {
@@ -121,7 +117,7 @@ void callback(char *topic, byte *payload, unsigned int length) {
 }
 ```
 
-### 完整代码
+完整代码示例如下：
 
 ```c
 #include <ESP8266WiFi.h>
@@ -132,11 +128,11 @@ const char *ssid = "mousse"; // Enter your WiFi name
 const char *password = "qweqweqwe";  // Enter WiFi password
 
 // MQTT Broker
-const char *mqtt_broker = "broker.emqx.io";
-const char *topic = "esp8266/test";
-const char *mqtt_username = "emqx";
-const char *mqtt_password = "public";
-const int mqtt_port = 1883;
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 1883; // port of MQTT over TCP
 
 WiFiClient espClient;
 PubSubClient client(espClient);
@@ -187,17 +183,237 @@ void loop() {
 }
 ```
 
-## 测试验证
 
-1. 请使用 Arduino IDE 将完整代码上传到 ESP8266，并打开串口监视器
+### 通过 TLS/SSL 端口进行连接
+TCP 端口和 TLS/SSL 端口连接在连接设置部分略有不同，发布和订阅部分代码相同。
+
+1. 导入 WiFi 和 PubSubClient 库。
+
+```c
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+#include <WiFiClientSecureBearSSL.h>
+```
+
+2. 设置 Wi-Fi 名称和密码，以及 MQTT 服务器连接地址和端口。
+
+   如果您在使用 EMQX Cloud, 请参考 [Serverless 认证鉴权](../deployments/auth_serverless.md)和[专有版认证鉴权](../deployments/auth_dedicated.md)设置用户名和密码。
+
+```c
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+```
+
+3. 添加服务端证书。如果您在使用公共 MQTT Broker、Serverless 部署或基础版部署的 TLS/SSL 端口连接，在此[下载 CA 证书](https://assets.emqx.com/data/emqxsl-ca.crt)。 如您使用专业版部署的 TLS/SSL 端口连接，请使用自己的服务端证书。
+
+```c
+// load DigiCert Global Root CA ca_cert
+const char * ca_cert = \
+  "-----BEGIN CERTIFICATE-----\n"\
+"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
+"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
+"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
+"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
+"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
+"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
+"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
+"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
+"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
+"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
+"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
+"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
+"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
+"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
+"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
+"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
+"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
+"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
+"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
+"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
+"-----END CERTIFICATE-----\n";
+
+BearSSL::WiFiClientSecure espClient; //
+PubSubClient client(espClient); //
+```
+
+4. 打开串行连接，以便于输出程序的结果并且连接到 Wi-Fi 网络。
+
+```c
+// Set software serial baud to 115200;
+Serial.begin(115200);
+// connecting to a WiFi network
+WiFi.begin(ssid, password);
+while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.println("Connecting to WiFi..");
+}
+Serial.println("Connected to the WiFi network");
+```
+
+5. 设置证书并使用 PubSubClient 连接到公共 MQTT Broker。
+
+```c
+BearSSL::X509List ca(ca_cert);
+espClient.setTrustAnchors(&ca);
+client.setServer(mqtt_broker, mqtt_port);
+client.setCallback(callback);
+while (!client.connected()) {
+    String client_id = "esp8266-client-";
+    client_id += String(WiFi.macAddress());
+    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
+    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+        Serial.println("Connected to MQTT broker.");
+    } else {
+        Serial.print("Failed to connect to MQTT broker, rc=");
+        Serial.print(client.state());
+        Serial.println(" Retrying in 5 seconds.");
+        delay(5000);
+    }
+}
+```
+
+6. MQTT 服务器连接成功后，ESP8266 将向 MQTT 服务器发布消息和订阅主题。
+
+```c
+// publish and subscribe
+client.publish(topic, "hello emqx"); // publish to the topic
+client.subscribe(topic); // subscribe from the topic
+```
+
+7. 将主题名称打印到串行端口，然后打印收到消息的每个字节。
+
+```c
+void callback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+```
+
+完整代码示例如下：
+
+```c
+#include <ESP8266WiFi.h>
+#include <PubSubClient.h>
+#include <WiFiClientSecureBearSSL.h>
+
+// WiFi
+const char *ssid = "mousse"; // Enter your WiFi name
+const char *password = "qweqweqwe";  // Enter WiFi password
+
+// MQTT Broker
+const char *mqtt_broker = "broker.emqx.io"; // broker address
+const char *topic = "esp8266/test"; // define topic 
+const char *mqtt_username = "emqx"; // username for authentication
+const char *mqtt_password = "public"; // password for authentication
+const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+
+
+// load DigiCert Global Root CA ca_cert
+const char * ca_cert = \
+  "-----BEGIN CERTIFICATE-----\n"\
+"MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh\n"\
+"MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\n"\
+"d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD\n"\
+"QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT\n"\
+"MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j\n"\
+"b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG\n"\
+"9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB\n"\
+"CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97\n"\
+"nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt\n"\
+"43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P\n"\
+"T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4\n"\
+"gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO\n"\
+"BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR\n"\
+"TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw\n"\
+"DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr\n"\
+"hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg\n"\
+"06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF\n"\
+"PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls\n"\
+"YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk\n"\
+"CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4="\
+"-----END CERTIFICATE-----\n";
+
+BearSSL::WiFiClientSecure espClient;
+PubSubClient client(espClient);
+
+void setup() {
+  Serial.begin(115200);
+  WiFi.begin(ssid, password);
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(1000);
+    Serial.println("Connecting to WiFi...");
+  }
+  Serial.println("Connected to the WiFi network");
+
+  // connecting to a mqtt broker
+  BearSSL::X509List ca(ca_cert);
+  espClient.setTrustAnchors(&ca);
+  client.setServer(mqtt_broker, mqtt_port);
+  client.setCallback(callback);
+  while (!client.connected()) {
+    String client_id = "esp8266-client-";
+    client_id += String(WiFi.macAddress());
+    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
+    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+        Serial.println("Connected to MQTT broker.");
+    } else {
+        Serial.print("Failed to connect to MQTT broker, rc=");
+        Serial.print(client.state());
+        Serial.println(" Retrying in 5 seconds.");
+        delay(5000);
+    }
+  }
+
+    // publish and subscribe
+    client.publish(topic, "hello emqx"); // publish to the topic
+    client.subscribe(topic); // subscribe from the topic
+}
+
+void callback(char* topic, byte* payload, unsigned int length) {
+    Serial.print("Message arrived in topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
+}
+
+void loop() {
+  if (!client.connected()) {
+    reconnect();
+  }
+  client.loop();
+}
+```
+
+
+## 测试连接
+
+在成功连接 MQTT 服务器后，您可以使用 Arduino IDE 和 MQTT X 测试连接。
+
+1. 请使用 Arduino IDE 将完整代码上传到 ESP8266，并打开串口监视器。
    ![esp8266_connection](./_assets/esp8266_connection.png)
-
-2. 建立 MQTT X 客户端 与 MQTT 服务器的连接, 并向 ESP8266 发送消息
+2. 建立 MQTT X 客户端 与 MQTT 服务器的连接, 并向 ESP8266 发送消息。
    ![esp8266_mqttx](./_assets/esp8266_mqttx.png)
-
-3. 在串口监视器查看 ESP8266 接收到的消息
+3. 在串口监视器查看 ESP8266 接收到的消息。
    ![esp8266_receive](./_assets/esp8266_receive.png)
 
 ## 更多内容
 
-综上所述，我们实现了在 ESP8266 项目中创建 MQTT 连接，使用客户端与 MQTT 服务器进行订阅、收发消息、取消订阅以及断开连接的场景。可以在 [这里](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266) 下载到示例的源码，同时也可以在 [GitHub](https://github.com/emqx/MQTT-Client-Examples) 上找到更多其他语言的 Demo 示例。
+综上所述，我们实现了在 ESP8266 项目中创建 MQTT 连接，模拟了使用客户端与 MQTT 服务器进行连接、订阅、收发消息的场景。可以在 [这里](https://github.com/emqx/MQTT-Client-Examples/tree/master/mqtt-client-ESP8266) 下载到示例的源码，同时也可以在 [GitHub](https://github.com/emqx/MQTT-Client-Examples) 上找到更多其他语言的 Demo 示例。
